@@ -40,6 +40,7 @@
 // Seqan
 #include <seqan/graph_types.h>
 #include <seqan/random.h>
+#include <seqan/misc/misc_union_find.h>
 
 #ifdef SEQAN_SWITCH_USE_FORWARDS
 #include <seqan/graph_algorithms/graph_algorithms_generated_forwards.h>
